app_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: systeam-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
      - systeambiz.com
      - seller.systeambiz.com
      - admin.systeambiz.com
      - buyerapi.systeambiz.com
      - sellerapi.systeambiz.com
      - adminapi.systeambiz.com
      - activemq.systeambiz.com
      secretName: systeam-secret
  rules:
  - host: systeambiz.com
    http:
      paths:
      - backend:
          serviceName: buyer-service-ui
          servicePort: 91
  - host: seller.systeambiz.com
    http:
      paths:
      - backend:
          serviceName: seller-service-ui
          servicePort: 92
  - host: admin.systeambiz.com
    http:
      paths:
      - backend:
          serviceName: admin-service-ui
          servicePort: 93
  - host: buyerapi.systeambiz.com
    http:
      paths:
      - backend:
          serviceName: buyer-service
          servicePort: 81
  - host: sellerapi.systeambiz.com
    http:
      paths:
      - backend:
          serviceName: seller-service
          servicePort: 82
  - host: adminapi.systeambiz.com
    http:
      paths:
      - backend:
          serviceName: admin-service
          servicePort: 83
  - host: activemq.systeambiz.com
    http:
      paths:
      - backend:
          serviceName: activemq-service
          servicePort: 8161
